# telegram-sms-termux

./: .gitignore  README.md
client/: Cargo.toml
client/src/: database.rs  datastructures.rs  main.rs  server.rs  test.rs
server/: Cargo.toml
