[package]
name = "termux-sms-client"
version = "0.1.0"
edition = "2018"

[features]
server = []

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
toml = "0.5"
sqlx = { version = "0.5", features = [ "json", "sqlite", "runtime-actix-native-tls"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
chrono = "0.4"
sha2 = "0.9"
clap = "2"
log4rs = "1"

#[target.aarch64-unknown-linux-musl.dependencies]
#openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level=3
lto=true
panic="abort"